[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-deepresearch"
version = "0.1.0"
description = "A project for LangGraph Deep Research"
authors = [
    { name="Tino Mager", email="tino.mager@outlook.de" }
]
dependencies = [
    "fastmcp",
    "httpx",
    "qdrant-client",
    "python-dotenv",
    "openai",
    "langchain-core",
    "asyncio"
]

[project.scripts]
mcp-server = "mcp_server.mcp_server:main"
langgraph-agent = "langgraph_agent.agent:main"

[tool.setuptools]
packages = ["mcp_server", "langgraph_agent", "langgraph_agent.mcp_client"]